WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274478
REGRESSION(
276827@main
): Large animated images may not animate all the frames
https://bugs.webkit.org/show_bug.cgi?id=274478
Summary
REGRESSION(276827@main): Large animated images may not animate all the frames
Said Abou-Hallawa
Reported
2024-05-21 12:10:30 PDT
1. Open
https://l.engage.covetruspharmacy.com/custloads/1046323924/md_147976.gif
Result: On a slow network, only a few frames of this image will animate. 2. Wait a few seconds 3. Close the window 4. Open the same link again Result: In the second time all the frames of the image will be animated. 5. Empty the caches (empty the web site data) 6. Close the window 6. Open the same link again Result: On a slow network, only a few frames of this image will animate. This is a regression of the BitmapImage refactoring
276827@main
. See
bug 273457
. We used to postpone animating the image till loading the image is complete. The number of frames can only be known for sure when the loading the encoded data is complete. If we start animating before we get all the data, we may end up animating a small set of the image frames.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-05-21 12:11:10 PDT
rdar://127697287
Said Abou-Hallawa
Comment 2
2024-05-21 12:15:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28863
EWS
Comment 3
2024-05-21 17:37:18 PDT
Committed
279090@main
(fab9c4ba90cc): <
https://commits.webkit.org/279090@main
> Reviewed commits have been landed. Closing PR #28863 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug