REGRESSION(276827@main): Large animated images may not animate all the frames https://bugs.webkit.org/show_bug.cgi?id=274478 rdar://127697287

Reviewed by Simon Fraser.

We used to postpone animating the image till loading the image is complete. The
number of frames can only be known for sure when the loading the encoded data is
complete. If we start animating before we get all the data, we may end up
animating a small set of the image frames.

The fix is to postpone animating the animated image till its encoded data is
completely loaded.

* Source/WebCore/platform/graphics/BitmapImageSource.cpp:
(WebCore::BitmapImageSource::frameAnimator const):

Canonical link: https://commits.webkit.org/279090@main